src/main/resources/static/css/index.css
/* ... */
.star-input {
    white-space: nowrap;
}

.star-input > .input {
    display: inline-block;
    width: 100px;
    background-size: 100px;
    height: 19px;
    white-space: nowrap;
    overflow: hidden;
    position: relative;
}

.star-input > .input > input {
    position: absolute;
    width: 1px;
    height: 1px;
    opacity: 0;
}

.star-input > .input.focus {
    outline: 1px dotted #ddd;
}

.star-input > .input > label {
    width: 10px;
    height: 0;
    padding: 19px 0 0 0;
    overflow: hidden;
    float: left;
    cursor: pointer;
    position: absolute;
    top: 0;
    left: 0;
}

.star-input > .input > label:hover,
.star-input > .input > input:focus + label,
.star-input > .input > input:checked + label {
    background-size: 100px;
    background-position: 0 bottom;
}

.star-input > .input > label:hover ~ label {
    background-image: none;
}

.star-input > .input > label[for="p1"] {
    width: 10px;
    z-index: 10;
}

.star-input > .input > label[for="p2"] {
    width: 20px;
    z-index: 9;
}

.star-input > .input > label[for="p3"] {
    width: 30px;
    z-index: 8;
}

.star-input > .input > label[for="p4"] {
    width: 40px;
    z-index: 7;
}

.star-input > .input > label[for="p5"] {
    width: 50px;
    z-index: 6;
}

.star-input > .input > label[for="p6"] {
    width: 60px;
    z-index: 5;
}

.star-input > .input > label[for="p7"] {
    width: 70px;
    z-index: 4;
}

.star-input > .input > label[for="p8"] {
    width: 80px;
    z-index: 3;
}

.star-input > .input > label[for="p9"] {
    width: 90px;
    z-index: 2;
}

.star-input > .input > label[for="p10"] {
    width: 100px;
    z-index: 1;
}

.star-input > output {
    display: inline-block;
    width: 36px;
    text-align: right;
}

.star-input > output > b {
    font: bold 18px Helvetica, Arial, sans-serif;
    vertical-align: middle;
}

/*answer page*/

.answer-content-body{
    position: absolute;
    padding: 2.5rem;
    margin: 1.5rem 0 0;
    width: 75%;
    height:75%;
    /*padding: 0 20px;*/
    box-sizing: border-box;
    overflow: hidden;
    background-color: #86b7fe;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(0,0,0,.1);
}

.answer-content-footer{
    margin-left: 2rem;
    margin-bottom: 2rem;
    position: absolute;
    bottom: 30%;
    width: 80%;
    /*justify-content: center;*/
}

.answer-content > .back{
    position: absolute;
    background-color: red;
    opacity: .5;
    z-index: 1;
}

.answer-content > .after{
    position: absolute;
    background-color: green;
    opacity: .5;
    z-index: 1;
}

